Deleted hard coded HTML and moved to client.js

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     
     <!-- Google Fonts Bundgee and san Source Pro -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
@@ -58,22 +58,6 @@
         </form>
       </section>
       <section id="tweets-container">
-        <!-- <article class="tweet">
-          <header>
-            <div>
-              <img> 'need avatar'
-            </div>
-            <span>User Handle</span>
-          </header>
-          <div><p>Placeholder what ev was tweeted</p></div>
-           <hr> semantic break for border/line 
-          <footer>
-            <h5>X days ago</h5>
-            <div>
-              <p>list or something for the 3 small icons</p>
-            </div>
-          </footer>
-        </article> -->
       </section>
     </main>
   </body>
