--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets/">
+        <form id="form-tweets">
+          <!-- method="POST" action="/tweets/" -->
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div>
