slideDown error warnings added to non compliant tweets

--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,10 @@
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form id="form-tweets">
-          <!-- method="POST" action="/tweets/" -->
-          <label for="tweet-text">What are you humming about?</label>
+          <div class="errMsg">
+            <p>Placeholder test</p>
+          </div>
+          <label for="tweet-text" >What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div>
             <button type="submit">Tweet</button>
