Updating stretch to top dropdown link

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,13 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
+      <div>
       <span>tweeter</span>
+     </div>
+     <div class="icon-hover" id="top-icon">
+       <a id="write-tweet">Write a tweet</a>
+       <i class="fa fa-angle-double-down"></i>
+     </div>
     </nav>
 
   <header>
