--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
@@ -21,7 +22,7 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js" ></script>
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
@@ -36,11 +37,13 @@
      </div>
      <div class="icon-hover" id="top-icon">
        <a id="write-tweet">Write a tweet</a>
+         <div class="arrow bounce">
        <i class="fa fa-angle-double-down"></i>
+        </div>
      </div>
     </nav>
 
-  <header>
+  <header class="header-main">
     <div>
         <img src="/images/profile-hex.png"> 
     </div>
